feat : game.js 추가

--- a/src/volume/back/package.json
+++ b/src/volume/back/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon ./src/index.js .src/gamelogic.js"
   },
   "dependencies": {
     "express": "^4.18.2",
