feat: socket.io room 기능 추가

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -2,8 +2,16 @@ FROM node_base:v1
 EXPOSE 22
 EXPOSE 3000
 
-RUN	mkdir -p /root/front
+# code-server및 extension설치
+RUN	curl -fsSL https://code-server.dev/install.sh | sh && \
+    code-server --install-extension dsznajder.es7-react-js-snippets
+
+RUN	mkdir -p /root/front &&\
+    echo 'set -e; yarn install; exec "$@"' > /yarn.sh && \
+	chmod +x /yarn.sh
+
 WORKDIR	/root/front
 RUN	echo "root:0000" | chpasswd
-RUN	service ssh start
-CMD	["/usr/sbin/sshd", "-D"]
+
+ENTRYPOINT ["bash", "/yarn.sh"]
+CMD ["/usr/sbin/sshd", "-D"]
