--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,13 +6,14 @@ EXPOSE 22
 RUN	sed -i 's/archive.ubuntu.com/mirror.kakao.com/g' /etc/apt/sources.list && \
 	sed -i 's/security.ubuntu.com/mirror.kakao.com/g' /etc/apt/sources.list
 
-RUN     apt-get update && \
-	apt-get install -y ssh vim tree git curl && \
-	curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - && \
-        apt-get update && apt-get install -y nodejs && \
-	npm install -g yarn
+RUN	apt-get update && \
+    apt-get install -y ssh vim tree git curl && \
+    curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - && \
+    apt-get update && apt-get install -y nodejs && \
+    npm install -g yarn
 # code-server및 extension설치
-RUN	curl -fsSL https://code-server.dev/install.sh | sh && \
-	code-server --install-extension dsznajder.es7-react-js-snippets
+#RUN	curl -fsSL https://code-server.dev/install.sh | sh && \
+#    code-server --install-extension dsznajder.es7-react-js-snippets
+RUN mkdir -p /run/sshd
 
-COPY	./conf/sshd_config /etc/ssh/sshd_config
+COPY /conf/sshd_config /etc/ssh/sshd_config
