--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     stdin_open: true
     volumes:
       - ./volume/back:/root/back
+      - ./volume/nest:/root/nest
     ports:
       - 4223:22
       - 3001:3001
