--- a/src/volume/front/package.json
+++ b/src/volume/front/package.json
@@ -15,6 +15,7 @@
     "@types/socket.io-client": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-logger": "^1.1.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "socket.io": "^4.6.0",
