problem : FE 소켓 만드는 위칙 관련 문제
- 소켓을 컴포넌트 외부에 만들면 연결 해제가 불필요하게 발생한다고
  생각함.
- 스켓을 컴포넌트 내부에 만들면 state가 바뀔 때 마다 소켓이 중복됨.
- 소켓이 중복되는 문제가 더 말아 안 돼서 외부에 만들어주는게 맞는 거 같음
- 그냥 App에 하나 만들어두고 계속 props로 가져가면서 써야하나 싶음.

--- a/src/volume/front/package.json
+++ b/src/volume/front/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-logger": "^1.1.0",
