--- a/src/volume/nest/package.json
+++ b/src/volume/nest/package.json
@@ -25,9 +25,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
+    "@types/uuid": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
