--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - 4223:22
       - 8181:8181
     volumes:
-      - ./vol/back:/root/front
+      - ./vol/back:/root/back
     #------------------
     tty: true
     stdin_open: true
@@ -51,6 +51,7 @@ services:
     ports:
       - 4222:22
       - 8080:8080
+      - 5173:5173
     volumes:
       - ./vol/front:/root/front
     #------------------
