wip : docker 수정 중

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -12,12 +12,17 @@ RUN	apt-get update && apt-get upgrade -y && apt-get install ssh vim tree -y
 COPY    ./conf/sshd_config /etc/ssh/sshd_config
 RUN     passwd -d root && service ssh start
 
+# ==== Node
 RUN     mkdir -p /pong
-COPY    ./conf/.backendenv /pong/.env
+COPY    ./conf/.backendenv /.env
 WORKDIR /pong
-RUN     echo "#!/bin/bash; echo "BE entrypoint" ;npm i; npm" > /entrypoint.sh && chmod +x /entrypoint.sh
-# RUN     npm i
+RUN     echo "#!/bin/sh \
+mv /.env /pong/ \
+npm i \
+npm start" > /entrypoint.sh && chmod +x /entrypoint.sh
 
-ENTRYPOINT [ "/entrypoint.sh" ];
-# CMD ["/usr/sbin/sshd", "-D"]
+
+
+CMD ["/usr/sbin/sshd", "-D"]
+# ENTRYPOINT [ "sh", "/entrypoint.sh" ];
 # CMD ["npm", "start"]
