--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -7,17 +7,17 @@ RUN     sed -i 's/archive.ubuntu.com/mirror.kakao.com/g' /etc/apt/sources.list &
         sed -i 's/security.ubuntu.com/mirror.kakao.com/g' /etc/apt/sources.list
 
 RUN	apt-get update && apt-get upgrade -y && apt-get install ssh vim tree -y
+RUN     npm install -g npm
 
 # ==== SSH
-COPY    ./conf/sshd_config /etc/ssh/sshd_config
-RUN     passwd -d root && service ssh start
+# COPY    ./conf/sshd_config /etc/ssh/sshd_config
+# RUN     passwd -d root && service ssh start
 
 # ==== Node
 RUN     mkdir -p /pong
-COPY    ./conf/.backendenv /.env
+COPY    ../../envs/.backendenv /.env
 COPY    ./tools/entrypoint.sh /entrypoint.sh
-WORKDIR /pong
 RUN     chmod +x /entrypoint.sh
+WORKDIR /pong
 
-# CMD ["/usr/sbin/sshd", "-D"]
 ENTRYPOINT [ "sh", "/entrypoint.sh" ];
